--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,52 @@
-django==3.2.*
-dj-database-url
-python-decouple
-django-uuid-upload
-Pillow
-django-solo
-django-python3-ldap
-django-minio-storage
-psycopg2-binary
-gunicorn
-django-currentuser
-django-ipware
-django-session-timeout
-whitenoise
+asgiref==3.5.1
+certifi==2021.10.8
+charset-normalizer==2.1.1
+configparser==5.3.0
+cssselect2==0.6.0
+da-vinci==0.3.0
+defusedxml==0.7.1
+dj-database-url==0.5.0
+Django==3.2.5
+django-admin-interface==0.18.5
+django-autoslug==1.9.8
+django-bootstrap-breadcrumbs==0.9.2
+django-ckeditor==6.2.0
+django-colorfield==0.6.3
+django-crum==0.7.9
+django-currentuser==0.5.3
+django-environ==0.8.1
+django-filter==22.1
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
+django-ipware==4.0.2
+django-js-asset==1.2.2
+django-minio-storage==0.3.10
+django-python3-ldap==0.15.4
+django-session-timeout==0.1.0
+django-solo==1.1.3
+django-svg-image-form-field==1.0.1
+django-uuid-upload==1.0.0
+easy-thumbnails==2.8.1
+environ==1.0
+gunicorn==20.1.0
+idna==3.4
+ldap3==2.9.1
+lxml==4.7.1
+minio==6.0.2
+Pillow==9.0.0
+psycopg2==2.9.3
+psycopg2-binary==2.8.5
+pyasn1==0.4.8
+python-dateutil==2.8.2
+python-decouple==3.6
+six==1.12.0
+sqlparse==0.4.2
+svglib==1.2.1
+tinycss2==1.1.1
+urllib3==1.26.13
+webencodings==0.5.1
+whitenoise==6.2.0
+wincertstore==0.2
 
 # conda update --all -y
 # conda create -n sistemaCastro python=3.10.* -y
