--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,10 @@ urllib3==1.26.13
 webencodings==0.5.1
 whitenoise==6.2.0
 wincertstore==0.2
+django-python3-ldap==0.15.4
+ldap3==2.9.1
+pyasn1==0.4.8
+wincertstore==0.2
 
 # conda update --all -y
 # conda create -n sistemaCastro python=3.10.* -y
