--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ django-python3-ldap==0.15.4
 ldap3==2.9.1
 pyasn1==0.4.8
 wincertstore==0.2
+requests==2.28.1
 
 # conda update --all -y
 # conda create -n sistemaCastro python=3.10.* -y
